--- a/css/index.scss
+++ b/css/index.scss
@@ -125,9 +125,11 @@ section.carousel{
     width: 100%;
     margin: 0 auto;
     padding: 22px 0;
+      
     >.carousel-nav{
         height: 55px;
         margin-bottom: 23px;
+        position: relative; 
         >.logo{
             float:left;
             width: 55px;
@@ -163,27 +165,157 @@ section.carousel{
         }
         >ul{
             float: left;
-            height: 16px;
-            transform: translateX(189px) translateY(18px);
+            height:100%;    
+            transform: translateX(189px);      
             >li{
                 float: left;
                 margin-right: 20px;
+                height: 100%;
                 >a{
                     font-size: 16px;
-                    line-height: 16px;
+                    line-height: 55px;
                     color: #333333;
                     &:hover{
                         color:#ff6700
                     }
                 }
+                >div{
+                    position: absolute;
+                    top: 78px;
+                    left: -584px;
+                    width: 1904px;
+                    height: 0;
+                    overflow: hidden;
+                    box-shadow: 0 3px 4px rgba(0,0,0,.18);
+                    background-color: #fff;
+                    transition:height .3s;
+                }
+                &:hover{
+                    >div{
+                        z-index: 10;
+                        height: 202px;
+                        transition: height .3s;
+                        border-top: 1px solid rgba(0,0,0,.18);
+                    }
+                }
             }
         }
         >.search{
+            
             float: right;
             width: 296px;
             height: 50px;
             transform: translateY(2px);
-            background-color: aqua;
+            position: relative;
+            >input{
+                box-sizing: border-box;
+                float: left;
+                width: 243px;
+                height: 48px;
+                outline: none;
+                border: 1px solid #b0b0b0;
+                &:focus{
+                    border-color: #ff6700;
+                    ~.msg{
+                        display: block;
+                        border-color: #ff6700;
+                    }
+                    ~.btn{
+                        border-color: #ff6700;
+                    }
+                    ~.tip1{
+                        display: none;
+                    }
+                    ~.tip2{
+                        display: none;
+                    }
+                }
+            }
+            >div.btn{
+                box-sizing: border-box;
+                float: left;
+                width: 50px;
+                height: 48px;
+                border: 1px solid #b0b0b0; 
+                border-left: none;
+                position: relative;
+                >i{
+                    position: absolute;
+                    top: 11px;
+                    left: 17px;
+                }
+                &:hover{
+                    background-color: #ff6700;
+                    >i{
+                        color: #fff;
+                    }
+                }
+            }
+            >div.msg{
+                position: absolute;
+                top: 48px;
+                width: 241px;
+                height: 300px;
+                border: 1px solid #b0b0b0;
+                border-top: none;
+                display: none;
+                background-color: #fff;
+            }
+            >div.tip1{
+                position: absolute;
+                top: 15px;
+                left: 58px;
+                padding: 0 5px;
+                height: 20px;
+                background-color: rgb(214, 211, 211);
+                >a{
+                    width: 100%;
+                    height: 100%;
+                    >h3{
+                        font-size: 10px;
+                        font-weight: 400;
+                        line-height: 20px;
+                        text-align: center;
+                        color: #666666;
+                    }
+                }
+                &:hover{
+                    background-color: #ff6700;
+                    >a{
+                        >h3{
+                            color: #fff;
+                        }
+                    }
+                }
+            }
+            >div.tip2{
+                position: absolute;
+                top: 15px;
+                left: 147px;
+                height: 20px;
+                padding: 0 5px;
+                background-color: rgb(214, 211, 211);
+                >a{
+                    width: 100%;
+                    height: 100%;
+                    >h3{
+                        font-size: 10px;
+                        font-weight: 400;
+                        line-height: 20px;
+                        text-align: center;
+                        color: #666666;
+                    }
+                }
+                &:hover{
+                    background-color: #ff6700;
+                    >a{
+                        >h3{
+                            color: #fff;
+                        }
+                    }
+                }
+            }
+
         }
     }
     >.carousel-chart{
@@ -227,7 +359,6 @@ main{
     }
     >.main-title{
         height: 22px;
-        background-color: rgb(62, 119, 172);
         margin-top: 40px;
         margin-bottom: 19px;
         >h2{
@@ -308,11 +439,18 @@ main{
                 width: 234px;
                 height: 300px;
                 margin-left: 14px;
-                background-color: rgb(8, 28, 92);
+                background-color: #ffffff;
+                transition: all .2s linear;
+                &:hover{
+                    z-index: 2;
+                    box-shadow: 0 15px 30px rgba(0,0,0,.1);
+                    transform: translate3d(0,-2px,0);
+                }
             }
             >li:nth-child(n+5){
                 margin-top: 14px;
             }
+            
         }
     }
     .main-video{
