--- a/css/index.css
+++ b/css/index.css
@@ -358,7 +358,7 @@ section.carousel > .carousel-nav > .search > div.tip2:hover > a > h3 {
 
 section.carousel > .carousel-chart {
   height: 460px;
-  background-color: aqua;
+  background-color: #b6b2b2;
   margin-bottom: 14px;
 }
 
@@ -367,6 +367,107 @@ section.carousel > .carousel-chart > .carousel-chart-nav {
   width: 235px;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.05);
+}
+
+section.carousel > .carousel-chart > .carousel-chart-nav > ul {
+  width: 100%;
+  transform: translateY(19px);
+  position: relative;
+}
+
+section.carousel > .carousel-chart > .carousel-chart-nav > ul > li {
+  width: 100%;
+  height: 42px;
+}
+
+section.carousel > .carousel-chart > .carousel-chart-nav > ul > li > a {
+  width: 100%;
+  height: 100%;
+  line-height: 42px;
+}
+
+section.carousel > .carousel-chart > .carousel-chart-nav > ul > li > a > h3 {
+  float: left;
+  font-size: 14px;
+  font-weight: 500;
+  color: #fff;
+  text-indent: 30px;
+}
+
+section.carousel > .carousel-chart > .carousel-chart-nav > ul > li > a > i {
+  float: right;
+  color: #fff;
+  font-weight: 600;
+  font-size: 22px;
+  margin-right: 18px;
+}
+
+section.carousel > .carousel-chart > .carousel-chart-nav > ul > li:hover {
+  background-color: #ff6700;
+}
+
+section.carousel > .carousel-chart > .carousel-chart-nav > ul > li:hover > div {
+  display: block;
+}
+
+section.carousel > .carousel-chart > .carousel-chart-nav > ul > li > div {
+  position: absolute;
+  top: -19px;
+  left: 235px;
+  width: 992px;
+  height: 460px;
+  display: none;
+  background-color: #fff;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.18);
+  border: 1px solid #e0e0e0;
+  border-left: none;
+  z-index: 20;
+}
+
+section.carousel > .carousel-chart > .carousel-chart-nav > ul > li > div > ul {
+  float: left;
+  width: 248px;
+  height: 456px;
+  padding: 2px 0;
+}
+
+section.carousel > .carousel-chart > .carousel-chart-nav > ul > li > div > ul > li {
+  float: left;
+  width: 248px;
+  height: 76px;
+}
+
+section.carousel > .carousel-chart > .carousel-chart-nav > ul > li > div > ul > li > a {
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+  line-height: 76px;
+}
+
+section.carousel > .carousel-chart > .carousel-chart-nav > ul > li > div > ul > li > a > img {
+  margin-left: 10px;
+}
+
+section.carousel > .carousel-chart > .carousel-chart-nav > ul > li > div > ul > li > a > span {
+  font-size: 14px;
+  color: #000;
+  margin-left: 10px;
+  font-weight: 400;
+  transition: color .2s;
+}
+
+section.carousel > .carousel-chart > .carousel-chart-nav > ul > li > div > ul > li:hover > a > span {
+  color: #ff6700;
+}
+
+section.carousel > .carousel-chart > .carousel-chart-nav > ul > li > div.carousel-chart-nav-minnav-03, section.carousel > .carousel-chart > .carousel-chart-nav > ul > li div.carousel-chart-nav-minnav-07 {
+  width: 530px;
+}
+
+section.carousel > .carousel-chart > .carousel-chart-nav > ul > li > div.carousel-chart-nav-minnav-05, section.carousel > .carousel-chart > .carousel-chart-nav > ul > li div.carousel-chart-nav-minnav-06
+, section.carousel > .carousel-chart > .carousel-chart-nav > ul > li div.carousel-chart-nav-minnav-09, section.carousel > .carousel-chart > .carousel-chart-nav > ul > li div.carousel-chart-nav-minnav-05
+, section.carousel > .carousel-chart > .carousel-chart-nav > ul > li div.carousel-chart-nav-minnav-10 {
+  width: 798px;
 }
 
 section.carousel > .carousel-display {
@@ -388,9 +489,75 @@ section.carousel > .carousel-display > ul > li:nth-child(1) {
   width: 235px;
 }
 
+section.carousel > .carousel-display > ul > li:nth-child(1) > ul {
+  padding: 3px;
+  font-size: 12px;
+  background-color: #5f5750;
+}
+
+section.carousel > .carousel-display > ul > li:nth-child(1) > ul > li {
+  position: relative;
+  float: left;
+  width: 70px;
+  height: 82px;
+  padding: 0 3px;
+  text-align: center;
+}
+
+section.carousel > .carousel-display > ul > li:nth-child(1) > ul > li > a {
+  display: block;
+  padding-top: 18px;
+  text-overflow: ellipsis;
+  color: #fff;
+  opacity: .7;
+  transition: opacity .2s;
+}
+
+section.carousel > .carousel-display > ul > li:nth-child(1) > ul > li > a > img {
+  display: block;
+  width: 24px;
+  height: 24px;
+  margin: 0 auto 4px;
+}
+
+section.carousel > .carousel-display > ul > li:nth-child(1) > ul > li > a:hover {
+  opacity: 1;
+}
+
 section.carousel > .carousel-display > ul > li:nth-child(n+2) {
   width: 315px;
   margin-left: 15px;
+}
+
+section.carousel > .carousel-display > ul > li:nth-child(n+2) > a {
+  display: block;
+  height: 170px;
+}
+
+section.carousel > .carousel-display > ul > li:nth-child(n+2) > a > img {
+  display: block;
+  width: 316px;
+  height: 170px;
+}
+
+.carousel-display-li::before {
+  position: absolute;
+  content: " ";
+  background: #665e57;
+  top: -1px;
+  left: 6px;
+  width: 64px;
+  height: 1px;
+}
+
+.carousel-display-li::after {
+  position: absolute;
+  content: " ";
+  background: #665e57;
+  top: 6px;
+  left: 0;
+  width: 1px;
+  height: 70px;
 }
 
 main {
