--- a/css/index.scss
+++ b/css/index.scss
@@ -320,13 +320,104 @@ section.carousel{
     }
     >.carousel-chart{
         height:460px;
-        background-color: aqua;
+        background-color: #b6b2b2;
         margin-bottom: 14px;
         >.carousel-chart-nav{
             float: left;
             width: 235px;
             height: 100%;
             background-color: rgba(0, 0, 0,0.05);
+            >ul{
+                width:100%;
+                transform:translateY(19px);
+                position: relative;
+                >li{
+                    width: 100%;
+                    height: 42px;
+                    
+                    >a{
+                        width: 100%;
+                        height: 100%;
+                        line-height: 42px;
+                        >h3{
+                            float: left;
+                            font-size: 14px;
+                            font-weight: 500;
+                            color: #fff;
+                            text-indent: 30px;
+                        }
+                        >i{
+                            float: right;
+                            color: #fff;
+                            font-weight: 600;
+                            font-size: 22px;
+                            margin-right:18px;
+                        }
+                    }
+                    &:hover{
+                        background-color: #ff6700;
+                        >div{
+                            display: block;
+                        }
+                    }
+                    >div{
+                        position: absolute;
+                        top: -19px;
+                        left: 235px;
+                        width: 992px;
+                        height: 460px;
+                        display: none;
+                        background-color: #fff;
+                        box-shadow: 0 8px 16px rgba(0,0,0,.18);
+                        border: 1px solid #e0e0e0;
+                        border-left: none;
+                        z-index: 20;
+                        >ul{
+                            float: left;
+                            width: 248px;
+                            height: 456px;
+                            padding: 2px 0;
+                            >li{
+                                float: left;
+                                width: 248px;
+                                height: 76px;
+                                >a{
+                                    display: inline-block;
+                                    width: 100%;
+                                    height: 100%;
+                                    line-height: 76px;
+                                    >img{
+                                        margin-left: 10px;   
+                                    }
+                                    >span{
+                                        font-size: 14px;
+                                        color: #000;
+                                        margin-left: 10px;
+                                        font-weight: 400;
+                                        transition: color .2s;
+                                    }
+                                }
+                                &:hover{
+                                    >a{
+                                        >span{
+                                            color: #ff6700;
+                                        }
+                                    }
+                                }
+                            }
+                           
+                        }
+                    }
+                    >div.carousel-chart-nav-minnav-03,div.carousel-chart-nav-minnav-07{
+                        width:530px;
+                    }
+                    >div.carousel-chart-nav-minnav-05,div.carousel-chart-nav-minnav-06
+                    ,div.carousel-chart-nav-minnav-09,div.carousel-chart-nav-minnav-05
+                    ,div.carousel-chart-nav-minnav-10{
+                        width:798px;
+                    }
+                }
+            }
         }
     }
     >.carousel-display{
@@ -341,14 +432,72 @@ section.carousel{
             }
             >li:nth-child(1){
                 width: 235px;
+                >ul{
+                    padding: 3px;
+                    font-size: 12px;
+                    background-color: #5f5750;
+                    >li{
+                        position: relative;
+                        float: left;
+                        width: 70px;
+                        height: 82px;
+                        padding: 0 3px;
+                        text-align: center;
+                        >a{
+                            display: block;
+                            padding-top: 18px;
+                            text-overflow: ellipsis;
+                            color: #fff;
+                            opacity: .7;
+                            transition: opacity .2s;
+                            >img{
+                                display: block;
+                                width: 24px;
+                                height: 24px;
+                                margin: 0 auto 4px;
+                                }
+                            &:hover{
+                                opacity: 1;
+                                }
+                        }
+                    }
+                }
             }
             >li:nth-child(n+2){
                 width: 315px;
-                margin-left: 15px;
+                 margin-left: 15px;
+                >a{
+                    display: block;
+                    height: 170px;
+                    >img{
+                        display: block;
+                        width: 316px;
+                        height: 170px;
+                    }
+                }
             }
         }
-    }
+    }   
 }
+.carousel-display-li::before{
+    position: absolute;
+    content: " ";
+    background: #665e57;
+    top: -1px;
+    left: 6px;
+    width: 64px;
+    height: 1px;
+}
+.carousel-display-li::after{
+    position: absolute;
+    content: " ";
+    background: #665e57;
+    top: 6px;
+    left: 0;
+    width: 1px;
+    height: 70px;
+}
+
 main{
     width: 100%;
     background-color: #f5f5f5;
