--- a/css/index.scss
+++ b/css/index.scss
@@ -505,6 +505,51 @@ main{
     padding-top:22px;
     >#main-title-flash-purchase{
         margin-top: 0;
+        >div{
+            height: 22px;
+            width: 71px;
+            background-color: #f5f5f5;
+            >ul{
+                width: 100%;
+                height: 100%;
+                >li{
+                    float: left;
+                    width: 34px;
+                    height: 22px;
+                    border: 1px solid #b0b0b0;
+                    margin-left: 0;
+                    >i{
+                        margin-left: 7px;
+                        color: #b0b0b0;
+                    }
+                }
+                >li:nth-child(1){
+                    border-right: none;
+                }
+            }
+        }
+        
+    }
+    >article.main-title-p{
+        >div{
+            width:92px;
+            >span{
+                font-size: 15px;
+                font-weight: 500;
+            } 
+            >div{
+                float: right;
+                width: 20px;
+                height: 20px;
+                border-radius: 50%;
+                background-color: #b0b0b0;
+                >i{
+                    margin-left: 2px;
+                    color: #fff;
+                    line-height: 20px;
+                }
+            } 
+        }
     }
     >.main-title{
         height: 22px;
@@ -519,9 +564,32 @@ main{
         }
         >div{
             float: right;
-            width: 100px;
             height: 100%;
-            background-color: darkolivegreen;
+            >ul{
+                width: 100%;
+                height: 100%;
+                >li{
+                    float: left;
+                    height: 100%;
+                    font-size: 16px;
+                    font-weight: 500;
+                    padding-bottom: 2px;
+                    margin-left: 32px;
+                    transition: border .3s;
+                    &:hover{
+                        color: #ff6700;
+                        border-bottom: 2px solid #ff6700;
+                        ~li:nth-child(1){
+                            color: #000;
+                            border:none;
+                        }
+                    }
+                }
+                >li:nth-child(1){
+                    color: #ff6700;
+                    border-bottom: 2px solid #ff6700;
+                }
+            }
         }
     }
     >.main-flash-purchase{
@@ -567,12 +635,26 @@ main{
             float: left;
             width: 234px;
             height: 100%;
-            background-color: darkolivegreen;
+            >a{
+                >img{
+                    transition: all .2s linear;
+                    &:hover{
+                        z-index: 2;
+                        box-shadow: 0 15px 30px rgba(0,0,0,.1);
+                        transform: translate3d(0,-2px,0);
+                    }
+                }
+            }
             >ul{
                 width: 234px;
                 >li{
                     height: 300px;
-                    background-color: hotpink;
+                    transition: all .2s linear;
+                    &:hover{
+                        z-index: 2;
+                        box-shadow: 0 15px 30px rgba(0,0,0,.1);
+                        transform: translate3d(0,-2px,0);
+                    }
                 }
                 >li:nth-child(1){
                     margin-bottom: 14px;
