--- a/css/index.scss
+++ b/css/index.scss
@@ -189,7 +189,7 @@ section.carousel{
                     box-shadow: 0 3px 4px rgba(0,0,0,.18);
                     background-color: rgb(124, 43, 43);
                     transition:height .3s;
-                    z-index: 100;
+                    z-index: 1000;
                 }
                 &:hover{
                     >div{
@@ -426,6 +426,7 @@ section.carousel{
             left: 0;
             right: 0;
             width: 1226px;
+            height: 100%;
             z-index: -1;
         }
     }
@@ -720,12 +721,12 @@ main{
         >ul{
             width: 100%;
             height: 79px;
-            border-bottom: 1px solid #b0b0b0;
+            border-bottom: 1px solid #e0e0e0;
             >li{
                 float: left;
                 height: 25px;
                 padding:0  58px;
-                border-right: 1px solid #b0b0b0;
+                border-right: 1px solid #e0e0e0;
                 transform: translateY(27px);
                 >a{
                     display: inline-block;
@@ -754,6 +755,73 @@ main{
             }
             >li:nth-child(5){
                 border:none;
+            }
+        }
+        >div{
+            transform: translateY(36px);
+            width: 100%;
+            height: 112px;
+            >ul{
+                float: left;
+                width: 974px;
+                height: 100%;
+                border-right: 1px solid #e0e0e0;
+                >li{
+                    float:left;
+                    width: 160px;
+                    >h3{
+                        font-size: 14px;
+                        color: #424242;
+                    }
+                    >ul{
+                        transform: translateY(26px);
+                        >li{
+                            margin-bottom: 12px;
+                            >a{
+                                font-size:12px;
+                                color:#757575;
+                            }
+                            &:hover{
+                                >a{
+                                    color:#ff6700;
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+            >div{
+                float: left;
+                height:100%;
+                transform: translateX(56px);
+                >p:nth-child(1){
+                    font-size: 22px;
+                    color: #ff6700;
+                }
+                >p:nth-child(2){
+                    font-size: 12px;
+                    color: #616161;
+                    margin-top: 5px;
+                }
+                >a{
+                    display: inline-block;
+                    width: 118px;
+                    height: 28px;
+                    font-size: 12px;
+                    line-height: 28px;
+                    background: #fff;
+                    color: #ff6700;
+                    margin-top: 5px;
+                    margin-left: 8px;
+                    border: 1px solid #ff6700;
+                }
+                >div{
+                    font-size: 12px;
+                    margin-top: 10px;
+                    position: relative;
+                    color: #616161;
+                    margin-left: 8px;
+                }
             }
         }
     }
