--- a/css/index.css
+++ b/css/index.css
@@ -46,6 +46,52 @@ header > nav > .nav-left > ul > li:nth-child(n+2) {
   border-left: 1px solid #393f3f;
 }
 
+header > nav > .nav-left > ul > li:nth-child(11) {
+  position: relative;
+}
+
+header > nav > .nav-left > ul > li:nth-child(11) > i {
+  position: absolute;
+  top: 17px;
+  left: 17px;
+  color: #fff;
+  display: none;
+  font-size: 30px;
+  font-weight: 900;
+}
+
+header > nav > .nav-left > ul > li:nth-child(11) > div {
+  position: absolute;
+  top: 25px;
+  left: -50%;
+  width: 124px;
+  height: 0px;
+  background: #fff;
+  box-shadow: 0 1px 5px #aaa;
+  text-align: center;
+  font-size: 14px;
+  color: #333;
+  line-height: 1;
+  overflow: hidden;
+  transition: height .3s;
+  z-index: 3333333;
+}
+
+header > nav > .nav-left > ul > li:nth-child(11) > div > img {
+  display: block;
+  width: 90px;
+  height: 90px;
+  margin: 18px auto 12px;
+}
+
+header > nav > .nav-left > ul > li:nth-child(11):hover > i {
+  display: block;
+}
+
+header > nav > .nav-left > ul > li:nth-child(11):hover > div {
+  height: 150px;
+}
+
 header > nav > .nav-right {
   float: right;
   width: 275px;
@@ -934,6 +980,15 @@ main .main-video > ul > li:nth-child(n+2) {
   margin-top: 5px;
   margin-left: 8px;
   border: 1px solid #ff6700;
+}
+
+.footer-nav > div > div > div > a > i {
+  margin-left: 25px;
+}
+
+.footer-nav > div > div > div > a:hover {
+  background: #ff6700;
+  color: #fff;
 }
 
 .footer-nav > div > div > div > div {
