--- a/css/index.scss
+++ b/css/index.scss
@@ -866,11 +866,52 @@ main{
                     }
                 }
                 >div{
-                    font-size: 12px;
                     margin-top: 10px;
-                    position: relative;
-                    color: #616161;
                     margin-left: 8px;
+                    padding-top: 1px;
+                    >span{
+                        display: inline-block;
+                        font-size: 12px;
+                        color: #616161;
+                        margin-top: 2px;
+                    }
+                    >a{
+                        display: inline-block;
+                        margin-left: 4px;
+                        width: 24px;
+                        height: 24px;
+                    }
+                    >a:nth-child(2){
+                        background: url(/项目练习/小米官网/images/wb.png) 50% 0 no-repeat;
+                        background-size: cover;
+                        &:hover{
+                            background-image: url(/项目练习/小米官网/images/wb@2x.png);;
+                        }
+                    }
+                    >a:nth-child(3){
+                        background: url(/项目练习/小米官网/images/wx.png) 50% 0 no-repeat;
+                        background-size: cover;
+                        position: relative;
+                        >div{
+                            position: absolute;
+                            top: 30px;
+                            left: -60px;
+                            padding: 5px;
+                            background-color: #fff;
+                            box-shadow: 0px 0px 3px #666666 ;
+                            display: none;
+                            >img{  
+                                width: 100px;
+                                height: 100px;
+                            }
+                        }
+                        &:hover{
+                            background-image: url(/项目练习/小米官网/images/wx@2x.png);
+                            >div{
+                                display: block;
+                            }
+                        }
+                    }
                 }
             }
         }
@@ -882,4 +923,40 @@ main{
     height: 231px;
     margin: 0 auto;
     background-color: #f5f5f5;
+    >div{
+        width:1044px;
+        height:174px;
+        background-color: #66605b;
+        transform: translateX(340px) translateY(30px);
+        position: relative;
+        >.logo-footer{
+            float: left;
+            width: 57px;
+            height: 57px;
+            margin-right: 10px;
+            background: url(/项目练习/小米官网/images/logo-footer.png) 50% 50% no-repeat;
+            position: absolute;
+            top: 0;
+            left: 0;
+        }
+        >div.links{
+            float: left;
+            margin-left: 67px;
+            >ul.sites{
+                height: 18px;
+                >li{
+                    float: left;
+                    height: 18px;
+                    border-right: 2px solid #b0b0b0;
+                    padding: 0 3px 0 3px;
+                    >a{
+                        font-size: 12px;
+                        line-height: 18px;
+                        color: #b0b0b0;
+                    }
+                }
+            }
+        }
+
+    }
 }
